testbot/Janitor: Add --dry-run and --log-only options.
Janitor.pl now prints informational messages to stdout by default. This
helps with debugging. The old behavior can be restored by using the
--log-only option, like with the other TestBot tools.
One can now also invoke it with the --dry-run option to see what it
would do.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/testbot/doc/INSTALL.txt
+++ b/testbot/doc/INSTALL.txt
@@ -67,7 +67,7 @@ General setup for the web site:
 Janitorial tasks:
 - Run the Janitor.pl script once per day to perform the janitorial
   tasks. For instance:
-    0 0 * * * $HOME/tools/testbot/bin/Janitor.pl
+    0 0 * * * $HOME/tools/testbot/bin/Janitor.pl --log-only
 - Run the CheckWineTestBot.pl script periodically to get notified in
   case the WineTestBot server dies. For instance:
     */20 * * * * $HOME/tools/testbot/scripts/CheckWineTestBot.pl
