testbot: Add proper command line options to CheckForWinetestUpdate.pl.
The options make it possible to test a specific job/task creation
without having to way for a new WineTest binary download each time.
Also it is now possible to specify the exact task type to create and
if none is given the script will now handle all of them. This way the
crontab commands don't need to be updated when new task types are
added.
Also the script now prints the error messages to stderr by default to
make it easier to figure things out when running it on the command
line. The --log-only option can be used when that's not desired.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/testbot/doc/INSTALL.txt
+++ b/testbot/doc/INSTALL.txt
@@ -86,8 +86,7 @@ Setup for Wine's patches site:
 Setup for Winetest updates:
 - Use a cron job to run CheckForWinetestUpdate.pl periodically. For
   instance:
-    */10 * * * * $HOME/tools/testbot/bin/CheckForWinetestUpdate.pl 32
-    */10 * * * * $HOME/tools/testbot/bin/CheckForWinetestUpdate.pl 64
+    */10 * * * * $HOME/tools/testbot/bin/CheckForWinetestUpdate.pl --log-only
 
 Setup for wine-devel:
 - A proper WineTestBot system should integrate with Wine's patches site.
