testbot: Document the dependency on Procmail.
It may be possible to do without it but it is used in the installation
instructions.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/testbot/doc/INSTALL.txt
+++ b/testbot/doc/INSTALL.txt
@@ -5,7 +5,7 @@ Dependencies:
 - Apache2 with mod_perl
 - MySQL
 - Perl DBD and DBI::mysql modules
-- Sendmail
+- Sendmail and Procmail
 - Sys::Virt (libsys-virt-perl, see http://libvirt.org/)
 - Image::Magick (perlmagick)
 - Optional: IO::Socket::IP (for IPv6, libio-socket-ip-perl)
